fixed delete item problem w/ icons with css and z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@300&display=swap');
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+///////// CSS RESET
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+///////////////////////
 body{
   // background: linear-gradient( whitesmoke, #6BA292);
   background-color: rgba(245,245,245,0.5);
@@ -32,7 +81,6 @@ body{
     h1{
     position:absolute;
     font-family: 'Pacifico', cursive;
-    top: -55px;
     right: 10%;
     color: #FFF07C;
     // color: #f8995a;
@@ -53,9 +101,7 @@ body{
   .chart-container{
     position: fixed;
     width: 33vw;
-    height: 82vh;
     background-color: rgba(0,0,0,0.7);
-  /* background-color: rgba(255,255,255,0.8); */
     color: white;
     margin-left: 1.5%;
     padding: 15px;
@@ -63,14 +109,16 @@ body{
   }
   .chart-container h2{
     font-size: 32px;
+    text-align: center;
+    margin: 40px;
+    font-family: 'Pacifico', cursive;
   }
   .chart-container p{
     background-color: rgba(0,0,0,0.75);
     font-size: 27px;
     position: relative;
-    bottom: 4%;
     left: 20%;
-    padding: 8px;
+    padding: 18px;
     width:20vw;
   }
   .reset-button{
@@ -97,6 +145,7 @@ body{
   }
   .delete-button{
     background-color: #cf391e;
+    opacity: 0.6;
     color: black;// colorchange
     width: 40px;
     height: 40px;
@@ -104,6 +153,7 @@ body{
   }
   .edit-button{
     background-color: black;
+    opacity: 0.6;
     height:40px;
     width: 40px;
   }
@@ -112,12 +162,16 @@ body{
     right:5px;
     top: -2px;
     margin: 0 auto;
+    z-index: -2;
   }
 
   .line-item{
     display: flex;
     flex-direction: row;
     align-items: center;
+    form{
+      width: 50vw;
+    }
     input{
       width: 270px;
     }
@@ -126,7 +180,7 @@ body{
     }
     button{
       position: relative;
-      top: 15px;
+      top: 10px;
       margin: 10px;
     }  
     .save-icon{
@@ -207,7 +261,6 @@ body{
   }
   .new-catagory form{
     position: relative;
-    left: 3%;
   }
 
   .deletePack{
@@ -256,7 +309,6 @@ body{
       margin: 0;
       h1{
         left: 22%;
-        top: -30px;
       }
       form{
       position: relative;
@@ -274,8 +326,9 @@ body{
       margin: auto 0;
     .chart-container{
       position: relative;
-      width: 85%;
+      width: 95%;
       height: 40%;
+      left: 10px;
       margin-bottom: 7vh;
       top: 20px;
       p{
@@ -285,13 +338,15 @@ body{
   .catagories-container{
       display: flex;
       flex-direction: column;
-      align-items: center ; 
+      align-items: center;
+      margin-right: 0; 
     }
     .catagory-container{
       position: relative;
-      left: 30px;
+      left: 10px;
       width: 95%;
       font-size: 18px;
+    
     }
     .catagory-name{
       right: 0%;
@@ -300,13 +355,17 @@ body{
       margin-right: 20px;
     }
     .line-item{
-      margin-top: 15px;;
+      margin-top: 15px;
+      form{
+        width: 80vw;
+      }
     }
   }
   .new-catagory{
-    left: 60px;;
     top: -30px;
+    margin: 0 auto;
     width: 70%;
+    left: 0vw;
   }
   .deletePack{
     width: 20%;
@@ -319,14 +378,9 @@ body{
 
     .header-bar{
       height: 370px;
-      width: 100%;
     }
     .pack{
     
-      left: 15px;
-      .chart-container{
-        right: 15px;
-      }
       .catagory-name{
         flex-direction: column;
         button{
@@ -343,7 +397,7 @@ body{
         }
       }
       .catagory-container{
-        left: 2px;
+        // left: 2px;
         margin: 0 auto;
         margin-bottom: 25px;
       }
